# Food_store

./: README.md  pyproject.toml
store_backend/store_backend/: asgi.py  settings.py  urls.py  wsgi.py
